# ChangeLog for games-mud/tintin
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-mud/tintin/ChangeLog,v 1.109 2011/03/04 12:55:45 ranger Exp $

  04 Mar 2011; Brent Baude <ranger@gentoo.org> tintin-2.00.5.ebuild:
  stable ppc, bug 353272

  10 Feb 2011; Markos Chandras <hwoarang@gentoo.org> tintin-2.00.5.ebuild:
  Stable on amd64 wrt bug #353272

  09 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> tintin-2.00.5.ebuild:
  x86 stable wrt bug #353272

  11 Jan 2011; Brent Baude <ranger@gentoo.org> tintin-2.00.4.ebuild:
  Marking tintin-2.00.4 ppc for bug 347067

*tintin-2.00.5 (31 Dec 2010)

  31 Dec 2010; Michael Sterrett <mr_bones_@gentoo.org>
  +tintin-2.00.5.ebuild:
  version bump

  02 Dec 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> tintin-2.00.4.ebuild:
  x86 stable wrt bug #347067

  29 Nov 2010; Markos Chandras <hwoarang@gentoo.org> tintin-2.00.4.ebuild:
  Stable on amd64 wrt bug #347067

*tintin-2.00.4 (24 Oct 2010)

  24 Oct 2010; Michael Sterrett <mr_bones_@gentoo.org>
  +tintin-2.00.4.ebuild:
  version bump

  15 Oct 2010; Brent Baude <ranger@gentoo.org> tintin-2.00.3.ebuild:
  stable ppc, bug 335823

  12 Sep 2010; Markos Chandras <hwoarang@gentoo.org> tintin-2.00.3.ebuild:
  Stable on amd64 wrt bug #335823

  06 Sep 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> tintin-2.00.3.ebuild:
  x86 stable wrt bug #335823

  12 Aug 2010; Joseph Jezak <josejx@gentoo.org> tintin-2.00.1.ebuild:
  Marked ppc stable for bug #318509.

*tintin-2.00.3 (02 Aug 2010)

  02 Aug 2010; Michael Sterrett <mr_bones_@gentoo.org>
  +tintin-2.00.3.ebuild:
  version bump

*tintin-2.00.2 (03 Jul 2010)

  03 Jul 2010; Michael Sterrett <mr_bones_@gentoo.org>
  +tintin-2.00.2.ebuild:
  version bump

  25 May 2010; Pacho Ramos <pacho@gentoo.org> tintin-2.00.1.ebuild:
  stable amd64, bug 318509

  20 May 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> tintin-2.00.1.ebuild:
  x86 stable wrt bug #318509
