@@ -1,6 +1,8 @@
 DIST tintin-2.00.4.tar.gz 247126 RMD160 fcf2c64fe52951a2dd43722bb4c245effd442348 SHA1 43e92dadbc41e6ad5fd8355e39eaeea082428fd2 SHA256 725e49362eb780c7747f5cdb257c4db0ade64f5eccf404768dace079669dc71b
 DIST tintin-2.00.5.tar.gz 247884 RMD160 e043ecb47ba63fc5782a08853bdf45d3889d5963 SHA1 757f28f882cf4103cf02be0a0874144d1cc10830 SHA256 e28aceae9dac2e38604f62f9719b7d00b1ae709586fa9bf86f6c6c0399ada8ec
+DIST tintin-2.00.6.tar.gz 251300 RMD160 7fc50627a1e00b31058dc7f37734561eb4598c9c SHA1 4170c7ea0f4cfaa3bf205624adbacfb6d92c9b7f SHA256 25410fba051774aa2978d19c4d68d6c69527a80bc11ef179d7fdb7a1fc15c7d4
 EBUILD tintin-2.00.4.ebuild 850 RMD160 b2e60be02c09177dcdbc08735952deaa3eabf11b SHA1 909572c6823e5466c95d69bd36a652185796328d SHA256 38124b95734387ff0de3de7febfeb035b46c324d03dd5e3f3defb9ed3fb6fcb6
 EBUILD tintin-2.00.5.ebuild 850 RMD160 78cd376e59fc7ecb1a157802818400370c3a2883 SHA1 140b4bb3e5c706a4f5fcb6bd6a8a8a945c8f4185 SHA256 df52645bddaf1d8c89e24908a8c3570d1419a62c9cfdf8ba4b2d0e4c8975f563
-MISC ChangeLog 13601 RMD160 57135bc5869ece1dfb5404fdfac4d8d3965f7d48 SHA1 46276a4297e18d02dcb2d9fc66fb16933235cd86 SHA256 1dea506602ae294e4978cb4cb5bb35c62d2ab87072df2383f8864a6b4c42cc3f
+EBUILD tintin-2.00.6.ebuild 856 RMD160 f23529d8273cb3a334211ca85798b12d43aa73ac SHA1 c6cadf26df873ae0c4ef6b1b012220121231438c SHA256 f40b9c89f749202076ca57e7fa18dcfe3a0b12850a4c42f5c62901387dad077e
+MISC ChangeLog 13730 RMD160 ac20e954e0681b3f76d12f01b0c548e492bc5b37 SHA1 1a51c6186454ba0b49f112c71fe9d01a1003738a SHA256 307fe29f569727c4f3189b7169c0fc7822794fdc7023ed6da1fd77384ce269bc
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
