@@ -1,6 +1,12 @@
 # ChangeLog for games-mud/tintin
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-mud/tintin/ChangeLog,v 1.109 2011/03/04 12:55:45 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-mud/tintin/ChangeLog,v 1.110 2011/03/14 06:25:22 mr_bones_ Exp $
+
+*tintin-2.00.6 (14 Mar 2011)
+
+  14 Mar 2011; Michael Sterrett <mr_bones_@gentoo.org>
+  +tintin-2.00.6.ebuild:
+  version bump
 
   04 Mar 2011; Brent Baude <ranger@gentoo.org> tintin-2.00.5.ebuild:
   stable ppc, bug 353272
